gtype – Mark _get_instance_private() function as G_GNUC_UNUSED

clang likes to complain about it being unused.

https://bugzilla.gnome.org/show_bug.cgi?id=723899